--- a/package.json
+++ b/package.json
@@ -11,5 +11,8 @@
   "scripts": {
     "dev": "yarn run tsc && node index.js"
   },
-  "dependencies": {}
+  "dependencies": {
+    "@types/lodash": "^4.14.191",
+    "lodash": "^4.17.21"
+  }
 }
